Fixed InputArea spacings

--- a/src/app/components/ChatInterface/components/InputArea/styles.module.css
+++ b/src/app/components/ChatInterface/components/InputArea/styles.module.css
@@ -17,5 +17,5 @@
   font-family: inherit;
   font-size: inherit;
   width: 100%;
-  margin: 1rem 2rem;
+  padding: 1rem 2rem;
 }
